labo et resultat de test

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
               "src/styles.css"
             ],
             "scripts": [
+             /* "src/assets/js/LoginApp.js"*/
              /* "src/assets/js/jquery-3.2.1.min.js",
               "src/assets/js/popper.min.js",
               "src/assets/js/bootstrap.min.js",
