--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "ng-multiselect-dropdown": "^0.2.4",
     "ngx-pagination": "^4.1.0",
     "ngx-spinner": "^7.2.0",
     "ngx-toastr": "^10.1.0",
