--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^6.0.0",
     "core-js": "^2.5.4",
     "ng-multiselect-dropdown": "^0.2.4",
     "ngx-pagination": "^4.1.0",
